[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jk_utils"
dynamic = [ "version" ]
authors = [
	{ name = "Jürgen Knauth", email = "pubsrc@binary-overflow.de" },
]
maintainers = [
	{ name = "Jürgen Knauth", email = "pubsrc@binary-overflow.de" },
]
description = "This python module provides various utility functions and classes."
readme = "README.md"
requires-python = ">=3.8"
keywords = [
	"utilities",
]
license = { text = "Apache2" }
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3",
]
dependencies = [
	"sortedcontainers",
	"jk_simpleexec",
	"jk_logging",
	"jk_version",
]

#[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
#Repository = "https://github.com/me/spam.git"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.flit.sdist]
exclude = [
	"bin/",
	"build/",
	"dist/",
	"sdist/",
	"*.egg-info",
	"*.OLD",
	"setup.cfg",
]

#[project.scripts]





